--- a/12bool.css
+++ b/12bool.css
@@ -8,6 +8,14 @@
   max-width: 100%;
 }
 
+.container-95 {
+  width: 95%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .row {
   display: flex;
   flex: wrap;
